<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="#EEEEEE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnLogout"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="13dp"
            android:src="@drawable/logout"
            android:contentDescription="@string/btnlogout" />

        <ImageView
            android:id="@+id/btnAddStory"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="23dp"
            android:src="@drawable/add"
            android:contentDescription="@string/btnlogin" />

        <ImageView
            android:id="@+id/btnMaps"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="23dp"
            android:src="@drawable/maps"
            android:contentDescription="@string/btnmaps"
            android:onClick="openMapsActivity" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_story" />
</RelativeLayout>
